<resources>
    <string name="app_name">Parse</string>
    <string name="game_id">1</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.</string>
    <string name="share">Share location</string>
    <string name="action_settings">Settings</string>
    <string name="submit_label">Coordinates submitted to db!</string>
    <string name="submit_error">No location detected; no location submitted!"</string>
    <string name="host_error">"Unknown Host Exception, yo!!"</string>
    <string name="title_activity_query">QueryActivity</string>

    <string name="status">Checking status.</string>
    <string name="colder">DARN. You are getting colder.</string>
    <string name="warmer">GOOD! You are getting warmer.</string>
    <string name="winner">YOU ARE THE WINNER !!!</string>

    <string name="button_start_label">Start new game</string>
    <string name="button_start_msg">New game started</string>
    <string name="button_locate_label">Check my location</string>
    <string name="button_locate_msg">Location check initiated</string>

</resources>